fix(ui): make output 100vh to prevent layout shift

--- a/src/ui/main.scss
+++ b/src/ui/main.scss
@@ -2,7 +2,8 @@
 
 html,
 body {
-  height: 100%;
+  height: 100vh;
+  min-height: 100vh;
   margin: 0;
   padding: 0;
 }
@@ -72,6 +73,10 @@ h3 {
 
 p {
   font-weight: 300;
+}
+
+#output {
+  flex: 1 0 100vh;
 }
 
 #script___inception {
